# OrcaManipulation

./: .gitignore  DEVELOPER_GUIDE.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  数据采集重构指南.md
src/conf/: openloong_conf.py
src/controllers/: abstract_controller.py  controller_2f85.py  controller_arm.py  controller_task.py  controllers.py
src/dataCollectionManager/: data_collection_manager.py
src/dataStorage/: abstract_data_storage.py  kps_data_storage.py  openloong_data_storage.py
src/devices/: abstract_device.py  data_device.py
src/devices/Interpolator/: abstract_interpolator.py
src/envs/dataCollection/: dataCollection_env.py
src/examples/dataCollection/: data_collection_aug.py  data_collection_tele.py  example.yaml
src/scene/: random_util.py  scene_manager.py
src/task/: abstract_task.py  pick_place_task.py
